Fix vertical alignment

--- a/client/me/privacy/style.scss
+++ b/client/me/privacy/style.scss
@@ -6,6 +6,7 @@
 
     .form-toggle__label {
         display: flex;
+        align-items: center;
     }
 }
 
